k8s/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-project-deployment
  namespace: bookstore
spec:
  replicas: 5
  selector:
    matchLabels:
      app: bookstore-app
  template:
    metadata:
      labels:
        app: bookstore-app
    spec:
      containers:
        - name: bookstore-container
          image: ivamilosavljevic/mybookstore:latest
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
