k8s/database.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bookstore-project-postgres
  namespace: bookstore
spec:
  serviceName: bookstore-project-postgres-service
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
        namespace: bookstore
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
              name: postgres-port
          volumeMounts:
            - name: bookstore-project-postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: bookstore-project-postgres-data
          persistentVolumeClaim:
            claimName: bookstore-project-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: bookstore
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
