k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstore-project-service
  namespace: bookstore
spec:
  selector:
    app: bookstore-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
